--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTOm/0RhYW8TseBV6lIZTn"
+      "authorship_tag": "ABX9TyPogC64sfYB/mo22piuXI81"
     },
     "kernelspec": {
       "name": "python3",
@@ -1420,6 +1420,91 @@
             "enter the number3\n",
             "enter the number3\n",
             "average is 3.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python program to Replace First Occurrence Of Vowel With ‘-‘ in String.(without replace function)\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "CayBpKe0C7kv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=input(\"enter the string\")\n",
+        "vowel=[\"a\",\"e\",\"i\",\"o\",\"u\",\"A\",\"E\",\"I\",\"O\",\"U\"]\n",
+        "for i in range (len(string)):\n",
+        "    if string[i] in vowel:\n",
+        "         string =string[:i]+\"-\"+string[i+1:]\n",
+        "         break\n",
+        "print(string)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aoaZJnGOC6y5",
+        "outputId": "3449371a-82dc-41d4-c036-25fee643e2ab"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringhi\n",
+            "h-\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```\n",
+        "Python program to Replace First Occurrence Of Vowel With ‘-‘ in String.(with replace function)\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "UhwcrfxeHTMk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=input(\"enter the string\")\n",
+        "vowel=[\"a\",\"e\",\"i\",\"o\",\"u\",\"A\",\"E\",\"I\",\"O\",\"U\"]\n",
+        "for i in string:\n",
+        "  if i in vowel:\n",
+        "    string=string.replace(i,\"-\")\n",
+        "    break\n",
+        "print(f\"after replacement:{string}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jLSSw5o6GkNT",
+        "outputId": "358eb32b-5dbf-4812-eed3-f9656bdb043e"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringhi\n",
+            "after replacement:h-\n"
           ]
         }
       ]
