--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPogC64sfYB/mo22piuXI81"
+      "authorship_tag": "ABX9TyO4jqpxDjxrKqevu9p1PDWr"
     },
     "kernelspec": {
       "name": "python3",
@@ -1508,6 +1508,67 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "```\n",
+        "Python program to count alphabets, digits and special characters.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "J3lhWpJ-IkCO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "count_a=0\n",
+        "count_d=0\n",
+        "count_s=0\n",
+        "string=input(\"enter the string\")\n",
+        "l=len([i for i in string if i.isdigit()])\n",
+        "l1=len([i for i in string if i.isalpha()])\n",
+        "l2 = len([i for i in string if not i.isdigit() and not i.isalpha()])\n",
+        "print(f\"Number of numerical characters:: {l}\")\n",
+        "print(f\"Number of alphabet characters:: {l1}\")\n",
+        "print(f\"Number of special characters:: {l2}\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F3U_AtKo5djU",
+        "outputId": "7a769d7a-7eed-4586-a0b0-37a4c72a9686"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringhomeland_33\n",
+            "Number of numerical characters:: 2\n",
+            "Number of alphabet characters:: 8\n",
+            "Number of special characters:: 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fkQN17Nj72qx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
