--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4jqpxDjxrKqevu9p1PDWr"
+      "authorship_tag": "ABX9TyPxjl6QlLyFS8eaAoJjw1+H"
     },
     "kernelspec": {
       "name": "python3",
@@ -1456,7 +1456,7 @@
         "id": "aoaZJnGOC6y5",
         "outputId": "3449371a-82dc-41d4-c036-25fee643e2ab"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1497,7 +1497,7 @@
         "id": "jLSSw5o6GkNT",
         "outputId": "358eb32b-5dbf-4812-eed3-f9656bdb043e"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1547,7 +1547,7 @@
         "id": "F3U_AtKo5djU",
         "outputId": "7a769d7a-7eed-4586-a0b0-37a4c72a9686"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1562,13 +1562,65 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python Program to delete element at end of Array.\n",
+        "\n",
+        "```\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "fkQN17Nj72qx"
+        "id": "7VN9_IaJSTGU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class inp:\n",
+        "  def __init__(self):\n",
+        "    print(\"Program to delete element at end of Array\")\n",
+        "  def get(self):\n",
+        "    self.n=int(input(\"how many numbers in the array\"))\n",
+        "  def input(self):\n",
+        "    inp.get(self)\n",
+        "    self.l=[]\n",
+        "    for i in range(self.n):\n",
+        "      num=int(input(\"enter the number to add in the list\"))\n",
+        "      self.l.append(num)\n",
+        "  def calc(self):\n",
+        "    inp.input(self)\n",
+        "    self.l.pop()\n",
+        "    return self.l\n",
+        "obj1=inp()\n",
+        "a=obj1.calc()\n",
+        "print(f\"after deleting : {a}\")\n"
+      ],
+      "metadata": {
+        "id": "fkQN17Nj72qx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "98a869f1-5d0b-471b-874d-d65eecac32c9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Program to delete element at end of Array\n",
+            "how many numbers in the array4\n",
+            "enter the number to add in the list1\n",
+            "enter the number to add in the list2\n",
+            "enter the number to add in the list3\n",
+            "enter the number to add in the list4\n",
+            "after deleting : [1, 2, 3]\n"
+          ]
+        }
+      ]
     }
   ]
 }
