--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxjl6QlLyFS8eaAoJjw1+H"
+      "authorship_tag": "ABX9TyOsYkTFuWUYLboKc3Bz16rx"
     },
     "kernelspec": {
       "name": "python3",
@@ -1621,6 +1621,149 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python Program to delete given element from Array.\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "aOSwa9qNVbo3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class inp:\n",
+        "  def __init__(self):\n",
+        "    print(\"Program to delete element at end of Array\")\n",
+        "  def get(self):\n",
+        "    self.n=int(input(\"how many numbers in the array\"))\n",
+        "  def input(self):\n",
+        "    inp.get(self)\n",
+        "    self.l=[]\n",
+        "    for i in range(self.n):\n",
+        "      num=int(input(\"enter the number to add in the list\"))\n",
+        "      self.l.append(num)\n",
+        "class calc(inp):\n",
+        "  def cal(self):\n",
+        "    inp.input(self)\n",
+        "    n1=int(input(\"enter the element to delete\"))\n",
+        "    l1=[]\n",
+        "    for j in self.l:\n",
+        "      if j==n1:\n",
+        "        continue\n",
+        "      else:\n",
+        "        l1.append(j4)\n",
+        "    return l1\n",
+        "obj1=calc()\n",
+        "a=obj1.cal()\n",
+        "print(f\"after deleting : {a}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JIAxkZmFVnQC",
+        "outputId": "3d0682cc-487e-4ad9-afa5-1282b6c5269e"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Program to delete element at end of Array\n",
+            "how many numbers in the array4\n",
+            "enter the number to add in the list1\n",
+            "enter the number to add in the list2\n",
+            "enter the number to add in the list3\n",
+            "enter the number to add in the list4\n",
+            "enter the element to delete3\n",
+            "after deleting : [1, 2, 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternative"
+      ],
+      "metadata": {
+        "id": "N7SHpNQYXm1f"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class inp:\n",
+        "  def __init__(self):\n",
+        "    print(\"Program to delete element at end of Array\")\n",
+        "  def get(self):\n",
+        "    self.n=int(input(\"how many numbers in the array\"))\n",
+        "  def input(self):\n",
+        "    inp.get(self)\n",
+        "    self.l=[]\n",
+        "    for i in range(self.n):\n",
+        "      num=int(input(\"enter the number to add in the list\"))\n",
+        "      self.l.append(num)\n",
+        "class calc(inp):\n",
+        "  def cal(self):\n",
+        "    inp.input(self)\n",
+        "    n1=int(input(\"enter the element to delete\"))\n",
+        "    l1=[]\n",
+        "    if n1 in self.l:\n",
+        "       self.l.remove(n1)\n",
+        "    return self.l\n",
+        "obj1=calc()\n",
+        "a=obj1.cal()\n",
+        "print(f\"after deleting : {a}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5gbcRxB7X1q9",
+        "outputId": "18ddc48d-225e-4049-d8ce-78fbdfda2c11"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Program to delete element at end of Array\n",
+            "how many numbers in the array4\n",
+            "enter the number to add in the list1\n",
+            "enter the number to add in the list3\n",
+            "enter the number to add in the list5\n",
+            "enter the number to add in the list7\n",
+            "enter the element to delete3\n",
+            "after deleting : [1, 5, 7]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JzZbTiKCYVaA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
