--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsYkTFuWUYLboKc3Bz16rx"
+      "authorship_tag": "ABX9TyN7oVTrDK04xX6RbMEQLA9O"
     },
     "kernelspec": {
       "name": "python3",
@@ -1757,13 +1757,49 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "```\n",
+        "Python Program to calculate factorial using iterative method.\n",
+        "```\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "JzZbTiKCYVaA"
+        "id": "iYAXDIyclkiZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fact(n):\n",
+        "  fact=1\n",
+        "  while(n>0):\n",
+        "    fact=fact*n\n",
+        "    n-=1\n",
+        "  return fact\n",
+        "n=int(input(\"enter the number you want to find the factorial\"))\n",
+        "a=fact(n)\n",
+        "print(f\"factorial of a number is {a}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JzZbTiKCYVaA",
+        "outputId": "00930115-8ed5-4c0b-ef43-dcfd3ead958b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number you want to find the factorial5\n",
+            "factorial of a number is 120\n"
+          ]
+        }
+      ]
     }
   ]
 }
