--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7oVTrDK04xX6RbMEQLA9O"
+      "authorship_tag": "ABX9TyOB3oKvtYvWbeFXCL0R2VqL"
     },
     "kernelspec": {
       "name": "python3",
@@ -1790,6 +1790,52 @@
         "outputId": "00930115-8ed5-4c0b-ef43-dcfd3ead958b"
       },
       "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number you want to find the factorial5\n",
+            "factorial of a number is 120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python Program to calculate factorial using recursion.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "D-gEV1FmCS5y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fact(n):\n",
+        "  if n==1 or n==0:\n",
+        "    return 1\n",
+        "  if(n>0):\n",
+        "     return n*fact(n-1)\n",
+        "    \n",
+        "n=int(input(\"enter the number you want to find the factorial\"))\n",
+        "a=fact(n)\n",
+        "print(f\"factorial of a number is {a}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FdlY3PzNCWkQ",
+        "outputId": "c1d14d6f-1611-4d2d-bbc9-16f16d154fd0"
+      },
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
