--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOB3oKvtYvWbeFXCL0R2VqL"
+      "authorship_tag": "ABX9TyPq1ZW0XIpZfaGBFDKeoPHX"
     },
     "kernelspec": {
       "name": "python3",
@@ -1843,6 +1843,55 @@
           "text": [
             "enter the number you want to find the factorial5\n",
             "factorial of a number is 120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python program to separate characters in a given string.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "BnNy4nmaGpe9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sep():\n",
+        "  a=\"hello\"\n",
+        "  list(map(lambda x:print(x,\"\\n\"),a))\n",
+        "sep()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kQrNSO24GtOp",
+        "outputId": "28c321ab-ee0e-486f-e2d1-7c2afd85a89a"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "h \n",
+            "\n",
+            "e \n",
+            "\n",
+            "l \n",
+            "\n",
+            "l \n",
+            "\n",
+            "o \n",
+            "\n"
           ]
         }
       ]
