--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPq1ZW0XIpZfaGBFDKeoPHX"
+      "authorship_tag": "ABX9TyP3u55TdVZN5qDsKfD6D/23"
     },
     "kernelspec": {
       "name": "python3",
@@ -1853,7 +1853,7 @@
         "\n",
         "\n",
         "```\n",
-        "Python program to separate characters in a given string.\n",
+        "Python program to separate characters in a given string using map function.\n",
         "```\n",
         "\n"
       ],
@@ -1892,6 +1892,45 @@
             "\n",
             "o \n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python program to remove blank space from string.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "KgI9r9rMJbI8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string = \"      gaya     \"\n",
+        "string = string.strip()\n",
+        "print(string)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Kyja-NGJeBk",
+        "outputId": "d37bfb86-77e4-4c1f-ffb6-b3fd7216263a"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "gaya\n"
           ]
         }
       ]
