--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3u55TdVZN5qDsKfD6D/23"
+      "authorship_tag": "ABX9TyOzdxG35OGtlua0BNaN8vsP"
     },
     "kernelspec": {
       "name": "python3",
@@ -1931,6 +1931,69 @@
           "name": "stdout",
           "text": [
             "gaya\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python Program to find sum of array elements.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "gn3BpjTiKIpw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class inp:\n",
+        "  def __init__(self):\n",
+        "    print(\"Program to delete element at end of Array\")\n",
+        "  def get(self):\n",
+        "    self.n=int(input(\"how many numbers in the array\"))\n",
+        "  def input(self):\n",
+        "    inp.get(self)\n",
+        "    self.l=[]\n",
+        "    for i in range(self.n):\n",
+        "      num=int(input(\"enter the number to add in the list\"))\n",
+        "      self.l.append(num)\n",
+        "class calc(inp):\n",
+        "  def cal(self):\n",
+        "    inp.input(self)\n",
+        "    add=sum(self.l)\n",
+        "    return add\n",
+        "obj1=calc()\n",
+        "a=obj1.cal()\n",
+        "print(f\"sum of integers in array : {a}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oept6_5HKvWr",
+        "outputId": "524d59ff-fe99-4ad8-cafd-3cc271cf540d"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Program to delete element at end of Array\n",
+            "how many numbers in the array6\n",
+            "enter the number to add in the list22\n",
+            "enter the number to add in the list44\n",
+            "enter the number to add in the list55\n",
+            "enter the number to add in the list66\n",
+            "enter the number to add in the list77\n",
+            "enter the number to add in the list8\n",
+            "sum of integers in array : 272\n"
           ]
         }
       ]
