--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzdxG35OGtlua0BNaN8vsP"
+      "authorship_tag": "ABX9TyO5nVToRLiRVK+Caj0XyKDX"
     },
     "kernelspec": {
       "name": "python3",
@@ -1994,6 +1994,43 @@
             "enter the number to add in the list77\n",
             "enter the number to add in the list8\n",
             "sum of integers in array : 272\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python Program to reverse a string without slicing\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "GR0pH9YFL91F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=\"my name is gaya\"\n",
+        "s=\"\"\n",
+        "s=s.join(a[-i] for i in range(1,len(a)+1))\n",
+        "print(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wj2zTYTdTRAr",
+        "outputId": "1fc3c3bb-e7dd-4848-8eb9-72797f5196f3"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ayag si eman ym\n"
           ]
         }
       ]
