--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5nVToRLiRVK+Caj0XyKDX"
+      "authorship_tag": "ABX9TyP7wYO01lsLkicKBDj1H2CW"
     },
     "kernelspec": {
       "name": "python3",
@@ -2031,6 +2031,49 @@
           "name": "stdout",
           "text": [
             "ayag si eman ym\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python Program to check a given number is even or odd.\n",
+        "```\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "KD6F316m0pls"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter the number to check\"))\n",
+        "if n%2==0:\n",
+        "  print(f\"{n} is even\")\n",
+        "else:\n",
+        "  print(f\"{n} is odd\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DtzkmYYi0nar",
+        "outputId": "51333527-c0a5-4277-eb3c-8625abd657a5"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number to check4\n",
+            "4 is even\n"
           ]
         }
       ]
