--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7wYO01lsLkicKBDj1H2CW"
+      "authorship_tag": "ABX9TyOjSccd+5vnKA2iQKBn16PL"
     },
     "kernelspec": {
       "name": "python3",
@@ -2077,6 +2077,79 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python program to print first n Prime Number.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "8Ce9Dexw1NOv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input(\"Enter the range: \"))\n",
+        "for i in range(1, n + 1):\n",
+        "    is_prime = True\n",
+        "    for j in range(2, i):\n",
+        "        if i % j == 0:\n",
+        "            is_prime = False\n",
+        "            break\n",
+        "    if is_prime:\n",
+        "        print(f\"{i} is prime\")\n",
+        "    else:\n",
+        "        print(f\"{i} is not prime\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5Xk54YQA1RYl",
+        "outputId": "7b03c73a-e353-4aae-b230-519a8eea25cc"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the range: 19\n",
+            "1 is prime\n",
+            "2 is prime\n",
+            "3 is prime\n",
+            "4 is not prime\n",
+            "5 is prime\n",
+            "6 is not prime\n",
+            "7 is prime\n",
+            "8 is not prime\n",
+            "9 is not prime\n",
+            "10 is not prime\n",
+            "11 is prime\n",
+            "12 is not prime\n",
+            "13 is prime\n",
+            "14 is not prime\n",
+            "15 is not prime\n",
+            "16 is not prime\n",
+            "17 is prime\n",
+            "18 is not prime\n",
+            "19 is prime\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "5QDUF_2B7Hj2"
+      }
     }
   ]
 }
