--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjSccd+5vnKA2iQKBn16PL"
+      "authorship_tag": "ABX9TyOXqvbcPCST3R0luFx1TMvC"
     },
     "kernelspec": {
       "name": "python3",
@@ -2146,10 +2146,45 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python program to concatenate two strings using join() method.\n",
+        "```\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "5QDUF_2B7Hj2"
+        "id": "o4cpRrK77TmO"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1=input(\"enter string 1\")\n",
+        "s2=input(\"enter string 2\")\n",
+        "s=\" \".join([s1,s2]) #give as a list\n",
+        "print(f\"after concatenation: {s}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bxM6Z13M7cH4",
+        "outputId": "61a6eabc-e3c3-44e4-a10f-ab13d80338bf"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter string 1hello\n",
+            "enter string 2world\n",
+            "after concatenation: hello world\n"
+          ]
+        }
+      ]
     }
   ]
 }
