--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXqvbcPCST3R0luFx1TMvC"
+      "authorship_tag": "ABX9TyOijihaToBdOCfTuvcbdRDo"
     },
     "kernelspec": {
       "name": "python3",
@@ -2171,9 +2171,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bxM6Z13M7cH4",
-        "outputId": "61a6eabc-e3c3-44e4-a10f-ab13d80338bf"
+        "outputId": "16ce4285-6a3e-4742-ab51-ef3c9724dab0"
       },
-      "execution_count": 55,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -2182,6 +2182,48 @@
             "enter string 1hello\n",
             "enter string 2world\n",
             "after concatenation: hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python program to concatenate two strings without using join() method.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "SKSBWYaV9cV3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1=input(\"enter string 1\")\n",
+        "s2=input(\"enter string 2\")\n",
+        "s=\"\"+s1+\" \"+s2 #give as a list\n",
+        "print(f\"after concatenation: {s}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iADJf9mi9fj9",
+        "outputId": "919b5a70-da0f-4a46-d867-264e8e484012"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter string 1hello\n",
+            "enter string 2world\n",
+            "after concatenation:  hello world\n"
           ]
         }
       ]
