--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOijihaToBdOCfTuvcbdRDo"
+      "authorship_tag": "ABX9TyOM7tR1+FCndTJALuyKUPXI"
     },
     "kernelspec": {
       "name": "python3",
@@ -2224,6 +2224,90 @@
             "enter string 1hello\n",
             "enter string 2world\n",
             "after concatenation:  hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python Program to print all even numbers and odd numbers in array.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "XmZnIucD-SPp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class inp:\n",
+        "  def get(self):\n",
+        "    self.n=int(input(\"how many numbers in the array\"))\n",
+        "  def get_input(self):\n",
+        "    inp.get(self)\n",
+        "    self.l=[]\n",
+        "    for i in range(self.n):\n",
+        "      num=int(input(\"enter the number to add in the list\"))\n",
+        "      self.l.append(num)\n",
+        "class even(inp):\n",
+        "  def __init__(self):\n",
+        "    print(\"Even numbers in the list\")\n",
+        "  def cal(self):\n",
+        "    inp.get_input(self)\n",
+        "    l1=[]\n",
+        "    for i in self.l:\n",
+        "      if i%2==0:\n",
+        "        l1.append(i)\n",
+        "    return l1\n",
+        "class odd(inp):\n",
+        "  def __init__(self):\n",
+        "    print(\"Odd numbers in the list\")\n",
+        "  def cal(self):\n",
+        "    self.get_input()\n",
+        "    l2=[]\n",
+        "    for i in self.l:\n",
+        "      if i%2!=0:\n",
+        "        l2.append(i)\n",
+        "    return l2\n",
+        "for i in [\"even\", \"odd\"]:\n",
+        "    cls = globals()[i]  # Get the class by name from the global namespace\n",
+        "    obj = cls()  # Create an instance of the class\n",
+        "    result = obj.cal()  # Call the 'cal' method\n",
+        "    print(f\"result: {result}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vu8q5bKG-R1y",
+        "outputId": "2be87122-8c7f-4701-908f-a8878d114e6e"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Even numbers in the list\n",
+            "how many numbers in the array5\n",
+            "enter the number to add in the list1\n",
+            "enter the number to add in the list2\n",
+            "enter the number to add in the list3\n",
+            "enter the number to add in the list4\n",
+            "enter the number to add in the list5\n",
+            "result: [2, 4]\n",
+            "Odd numbers in the list\n",
+            "how many numbers in the array4\n",
+            "enter the number to add in the list1\n",
+            "enter the number to add in the list3\n",
+            "enter the number to add in the list4\n",
+            "enter the number to add in the list5\n",
+            "result: [1, 3, 5]\n"
           ]
         }
       ]
