--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOM7tR1+FCndTJALuyKUPXI"
+      "authorship_tag": "ABX9TyNksiiSs5g1sPG++JytzMOS"
     },
     "kernelspec": {
       "name": "python3",
@@ -2311,6 +2311,80 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class inp:\n",
+        "  def get(self):\n",
+        "    self.n=int(input(\"how many numbers in the array\"))\n",
+        "  def get_input(self):\n",
+        "    inp.get(self)\n",
+        "    self.l=[]\n",
+        "    for i in range(self.n):\n",
+        "      num=int(input(\"enter the number to add in the list\"))\n",
+        "      self.l.append(num)\n",
+        "class even(inp):\n",
+        "  def __init__(self):\n",
+        "    print(\"Even numbers in the list\")\n",
+        "  def cal(self):\n",
+        "    inp.get_input(self)\n",
+        "    l1=[]\n",
+        "    for i in self.l:\n",
+        "      if i%2==0:\n",
+        "        l1.append(i)\n",
+        "    return l1\n",
+        "class odd(inp):\n",
+        "  def __init__(self):\n",
+        "    print(\"Odd numbers in the list\")\n",
+        "  def cal1(self):\n",
+        "    l2=[]\n",
+        "    for i in self.l:\n",
+        "      if i%2!=0:\n",
+        "        l2.append(i)\n",
+        "    return l2\n",
+        "class calculation(even,odd):\n",
+        "  def calci(self):\n",
+        "        a=self.cal()\n",
+        "        b=self.cal1()\n",
+        "        print(\"even numbers in the list\",a)\n",
+        "        print(\"odd numbers in the list\",b)\n",
+        "obj1=calculation()\n",
+        "obj1.calci()\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_2goBGZFGB2P",
+        "outputId": "2b8bddc4-2455-4ce5-c5ab-decda74b188f"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Even numbers in the list\n",
+            "how many numbers in the array5\n",
+            "enter the number to add in the list1\n",
+            "enter the number to add in the list2\n",
+            "enter the number to add in the list3\n",
+            "enter the number to add in the list4\n",
+            "enter the number to add in the list5\n",
+            "even numbers in the list [2, 4]\n",
+            "odd numbers in the list [1, 3, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "lSvdtP7n6jXB"
+      }
     }
   ]
 }
