--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNksiiSs5g1sPG++JytzMOS"
+      "authorship_tag": "ABX9TyMRx0O5qMmb/EKwltnxpnN1"
     },
     "kernelspec": {
       "name": "python3",
@@ -1605,7 +1605,7 @@
         },
         "outputId": "98a869f1-5d0b-471b-874d-d65eecac32c9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1676,7 +1676,7 @@
         "id": "JIAxkZmFVnQC",
         "outputId": "3d0682cc-487e-4ad9-afa5-1282b6c5269e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1702,7 +1702,7 @@
       "metadata": {
         "id": "N7SHpNQYXm1f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1738,7 +1738,7 @@
         "id": "5gbcRxB7X1q9",
         "outputId": "18ddc48d-225e-4049-d8ce-78fbdfda2c11"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1789,7 +1789,7 @@
         "id": "JzZbTiKCYVaA",
         "outputId": "00930115-8ed5-4c0b-ef43-dcfd3ead958b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1835,7 +1835,7 @@
         "id": "FdlY3PzNCWkQ",
         "outputId": "c1d14d6f-1611-4d2d-bbc9-16f16d154fd0"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1876,7 +1876,7 @@
         "id": "kQrNSO24GtOp",
         "outputId": "28c321ab-ee0e-486f-e2d1-7c2afd85a89a"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1924,7 +1924,7 @@
         "id": "1Kyja-NGJeBk",
         "outputId": "d37bfb86-77e4-4c1f-ffb6-b3fd7216263a"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1979,7 +1979,7 @@
         "id": "oept6_5HKvWr",
         "outputId": "524d59ff-fe99-4ad8-cafd-3cc271cf540d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2024,7 +2024,7 @@
         "id": "wj2zTYTdTRAr",
         "outputId": "1fc3c3bb-e7dd-4848-8eb9-72797f5196f3"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2066,7 +2066,7 @@
         "id": "DtzkmYYi0nar",
         "outputId": "51333527-c0a5-4277-eb3c-8625abd657a5"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2114,7 +2114,7 @@
         "id": "5Xk54YQA1RYl",
         "outputId": "7b03c73a-e353-4aae-b230-519a8eea25cc"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2173,7 +2173,7 @@
         "id": "bxM6Z13M7cH4",
         "outputId": "16ce4285-6a3e-4742-ab51-ef3c9724dab0"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2215,7 +2215,7 @@
         "id": "iADJf9mi9fj9",
         "outputId": "919b5a70-da0f-4a46-d867-264e8e484012"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2287,7 +2287,7 @@
         "id": "Vu8q5bKG-R1y",
         "outputId": "2be87122-8c7f-4701-908f-a8878d114e6e"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2360,7 +2360,7 @@
         "id": "_2goBGZFGB2P",
         "outputId": "2b8bddc4-2455-4ce5-c5ab-decda74b188f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2381,10 +2381,51 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python Program to find Smallest number among three.\n",
+        "```\n",
+        "\n"
+      ],
       "metadata": {
         "id": "lSvdtP7n6jXB"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter the first integer\"))\n",
+        "n2=int(input(\"enter the first integer\"))\n",
+        "n3=int(input(\"enter the first integer\"))\n",
+        "if n<n2 and n<n3:\n",
+        "  print(\"{} is smallest among {} and {}\".format(n,n2,n3))\n",
+        "elif n2<n3:\n",
+        "  print(\"{} is smallest among {} and {}\".format(n2,n,n3))\n",
+        "else:\n",
+        "    print(\"{} is smallest among {} and {}\".format(n3,n,n2))\n"
+      ],
+      "metadata": {
+        "id": "bISmUJFn7b4Y",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f7c5a2d4-dc61-45cd-8b8c-cf7d035c0688"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the first integer12\n",
+            "enter the first integer13\n",
+            "enter the first integer5\n",
+            "5 is smallest among 12 and 13\n"
+          ]
+        }
+      ]
     }
   ]
 }
