--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRx0O5qMmb/EKwltnxpnN1"
+      "authorship_tag": "ABX9TyOIT5h0tH36jT9cxviicIHw"
     },
     "kernelspec": {
       "name": "python3",
@@ -2426,6 +2426,61 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python program to remove repeated character from string.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "AfZl3LUavuXD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=input(\"enter the string\")\n",
+        "l=[i for i in string]\n",
+        "import pandas as pd\n",
+        "s=pd.Series(l)\n",
+        "s=s.drop_duplicates()\n",
+        "s1=\"\"\n",
+        "for j in s:\n",
+        "  s1=s1+j\n",
+        "print(f\"After removing the repeated characters from the string : {s1}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iyr6Zy-hvuAb",
+        "outputId": "22fb5ed0-2d98-41dc-8033-f195079a4b72"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringhello\n",
+            "After removing the repeated characters from the string : helo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "o1eZtQBUyUoG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
