--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIT5h0tH36jT9cxviicIHw"
+      "authorship_tag": "ABX9TyMdboyodDhY0TSKHTsCShgp"
     },
     "kernelspec": {
       "name": "python3",
@@ -2411,18 +2411,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f7c5a2d4-dc61-45cd-8b8c-cf7d035c0688"
+        "outputId": "016d7a01-41cc-4b77-96f4-c2d4db80241f"
       },
-      "execution_count": 2,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "enter the first integer12\n",
-            "enter the first integer13\n",
-            "enter the first integer5\n",
-            "5 is smallest among 12 and 13\n"
+            "enter the first integer4\n",
+            "enter the first integer7\n",
+            "4 is smallest among 12 and 7\n"
           ]
         }
       ]
@@ -2475,12 +2475,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#alternative\n",
+        "from collections import OrderedDict\n",
+        "string=input(\"enter the string\")\n",
+        "s1=\"\".join(OrderedDict.fromkeys(string))\n",
+        "print(f\"After removing the repeated characters from the string : {s1}\")"
+      ],
       "metadata": {
-        "id": "o1eZtQBUyUoG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o1eZtQBUyUoG",
+        "outputId": "c9e595cb-1d88-4116-c493-5f97281f23e1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringfathima\n",
+            "After removing the repeated characters from the string : fathim\n"
+          ]
+        }
+      ]
     }
   ]
 }
