--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdboyodDhY0TSKHTsCShgp"
+      "authorship_tag": "ABX9TyPEdg4XK9vOHovn7eeZ/X/T"
     },
     "kernelspec": {
       "name": "python3",
@@ -2413,7 +2413,7 @@
         },
         "outputId": "016d7a01-41cc-4b77-96f4-c2d4db80241f"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2461,7 +2461,7 @@
         "id": "iyr6Zy-hvuAb",
         "outputId": "22fb5ed0-2d98-41dc-8033-f195079a4b72"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2489,7 +2489,7 @@
         "id": "o1eZtQBUyUoG",
         "outputId": "c9e595cb-1d88-4116-c493-5f97281f23e1"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2497,6 +2497,52 @@
           "text": [
             "enter the stringfathima\n",
             "After removing the repeated characters from the string : fathim\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "To sum the integers in the string\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Mryus9BfEsuQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=input(\"enter the string\")\n",
+        "l=[]\n",
+        "for i in string:\n",
+        "  if i.isdigit():\n",
+        "    l.append(i)\n",
+        "sum=0\n",
+        "for j  in l:\n",
+        "  sum+=int(j)\n",
+        "print(f\"sum of integers in string: {sum}\")"
+      ],
+      "metadata": {
+        "id": "womeQ2zshLLl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "35060ad3-72e2-479e-e1db-8d9e86d01e53"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringfathi33\n",
+            "sum of integers in string: 6\n"
           ]
         }
       ]
